Added date time picker

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <link rel='apple-touch-icon' sizes="114x114" href='./img/prose@114.png' />
   <link rel='apple-touch-icon' sizes="144x144" href='./img/prose@144.png' />
   <link rel='stylesheet' href='./style.css'>
+  <link rel='stylesheet' href='./vendor/datetimepicker/jquery.datetimepicker.css'>
 </head>
 <body>
   <div id='prose'></div>
   <script src='locale.js'></script>
   <script src='dist/prose.js'></script>
+  <script src='vendor/datetimepicker/jquery.datetimepicker.js'></script>
 </body>
 </html>
