Changed back prose to the min version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id='prose'></div>
   <script src='locale.js'></script>
-  <script src='dist/prose.js'></script>
+  <script src='dist/prose.min.js'></script>
   <script src='vendor/datetimepicker/jquery.datetimepicker.js'></script>
 </body>
 </html>
